Add order's cost to the list orders into manager UI.

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,19 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+.parcel-cache/
+.python-version
+.idea
+.venv2
